--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.12.3",
-        "react-router-dom": "^5.3.0"
+        "react-router-dom": "^5.3.0",
+        "styled-components": "^5.3.3"
     }
 }
