--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
         "@material-ui/core": "^4.12.3",
         "@mui/icons-material": "^5.3.0",
         "@mui/material": "^5.3.0",
+        "formik": "^2.2.9",
         "react-circular-progressbar": "^2.0.4",
         "react-router-dom": "^5.3.0",
         "styled-components": "^5.3.3"
