--- a/backend/public/mix-manifest.json
+++ b/backend/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=49c646bd7250b23fc6f8",
+    "/css/app.css": "/css/app.css?id=1ba4616002e30d600ff3"
 }
